# SettingUpGoogleTest

./: CMakeLists.txt  main.cpp
lib/Test/: TDMASolver.h  Test.cpp  className.h  testTDMA.cpp
lib/Test/Include/: TDMASolver.h
lib/Test/src/: TDMASolver.cpp  TDMASolverTest.cpp  Test.cpp
